CHANGES.txt - 04/18/2005
------------------------

CHANGES IN CUPS V1.2.0b1

	- The scheduler could crash when deleting a class due to
	  infinite recursion.
	- Updated the Zebra ZPL label printer driver to use the
	  run-length encoding and support more options.
	- Updated serial backend to scan for /dev/ttyC* as well
	  as /dev/ttyc* for Cyclades serial ports (STR #1049)
	- The scheduler could hang reading the job status under
	  certain circumstances (STR #1068)
	- The USB backend termination signal code was inverted
	  (STR #1046)
	- Moved enable and disable commands to sbindir to be
	  consistent.
	- Updated pdftops filter to Xpdf 3.00.03.
	- Added new cupsRasterInterpretPPD() function for RIP
	  filters to setup the raster page header from
	  PostScript commands in a PPD file.
	- The CUPS browsing protocol now offers a "delete" bit
	  to remove printers as soon as they are deleted on the
	  server or as soon as the server shuts down gracefully
	  (STR #793)
	- The CUPS_SERVER and ServerName directives (client.conf
	  and ~/.cupsrc) may now contain names of the form
	  "server:port" and "/path/to/domain/socket".
	- The "cancel -u user" command now works for ordinary
	  users (STR #751)
	- Added test run support to "make test" target (STR #64)
	- Added domain socket support (STR #656)
	- Added BrowseLocalOptions directive to allow the
	  administrator to add printer URI options to the browse
	  URI, e.g. "encryption=required" (STR #732)
	- Added BrowseRemoteOptions directive to allow the
	  administrator to add standard URI options to the
	  remote printer URI, e.g. "encryption=required" (STR
	  #732)
	- Now put "-I.." compiler option in front of all others
	  to ensure that local CUPS headers are used before
	  installed headers (STR #437)
	- New cupsLangPrintf() and cupsLangPuts() for localized
	  interfaces.
	- Now support custom attributes and extended options in
	  PPD files.
	- Now provide functions to save PPD files.